Adicionado video abertura

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
   <div class="transicao"></div>
   <main class="conteudoPrincipal">
   <section class="abertura container">
-    <img src="/img/logototaltransparente.png" alt="Logo Lecelo Studio" class="logoPrincipal" >
-
+    <img  src="/img/logototaltransparente.png" alt="Logo Lecelo Studio" class="logoPrincipal" >
+    <video class="video_abertura"  loop autoplay>
+      <source src="videos/Atenção às suas Redes sociais  - story.mp4" type="video/mp4">
   </section>
   <section class="perfil container" id="perfil">
     <div class="perfil-informacao">
