Corrigindo video abertura

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <main class="conteudoPrincipal">
   <section class="abertura container">
     <img  src="/img/logototaltransparente.png" alt="Logo Lecelo Studio" class="logoPrincipal" >
-    <video class="video_abertura"  loop autoplay>
+    <video class="video_abertura" controls loop autoplay>
       <source src="videos/Atenção às suas Redes sociais  - story.mp4" type="video/mp4">
   </section>
   <section class="perfil container" id="perfil">
